test/corpus/BSV_exports.txt
=======
Exports
=======

package WithExports;
  export Something :: *;
  export SomethingElse :: *;
  export TwoThings :: *, AtOnce :: *;
  export YetAnotherThing :: *;
  export SomeName;
  export someName;
  export SomeNameWithFields (..);
  export someNameWithFields (..);
  export SomeMix :: *, OfMany, things (..), Really (..);
endpackage

-------

(bsv_package
  (bsv_packageIde)
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde))
                  (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde)))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem))
  (bsv_exportDecl (bsv_exportItem (bsv_packageIde))
                  (bsv_exportItem)
                  (bsv_exportItem)
                  (bsv_exportItem)))
