test/corpus/BSV_imports.txt
=======
Imports
=======

package WithImports;
  import Something :: *;
  import SomethingElse :: *;
  import TwoThings :: *, AtOnce :: *;
  import YetAnotherThing :: *;
endpackage

-------------

(bsv_package
  (bsv_packageIde)
  (bsv_importDecl (bsv_importItem (bsv_packageIde)))
  (bsv_importDecl (bsv_importItem (bsv_packageIde)))
  (bsv_importDecl (bsv_importItem (bsv_packageIde))
                  (bsv_importItem (bsv_packageIde)))
  (bsv_importDecl (bsv_importItem (bsv_packageIde))))
