test/corpus/BSV_simple_module_complex_identifier.txt
==================
Complex identifier
==================

package OneModulePackage;

module mkA_w3Ird_N4m3 ();
endmodule

endpackage

------------------

(bsv_package
   (bsv_packageIde)
   (bsv_packageStmt (bsv_moduleDef (bsv_moduleProto))))
